--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "rn-pokedex",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -25,10 +24,12 @@
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.9",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "expo-splash-screen": "~0.17.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@react-native-firebase/app": "^17.3.2",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
     "@types/styled-components-react-native": "^5.2.1",
