build gradle config

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -219,10 +219,16 @@ android {
     }
     signingConfigs {
         debug {
-            storeFile file('debug.keystore')
-            storePassword 'android'
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
+            storeFile file('your_key_name.keystore')
+            storePassword '123123123'
+            keyAlias 'your_key_alias'
+            keyPassword '123123123'
+        }
+        release {
+            storeFile file('your_key_name.keystore')
+            storePassword '123123123'
+            keyAlias 'your_key_alias'
+            keyPassword '123123123'
         }
     }
     buildTypes {
@@ -235,6 +241,7 @@ android {
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release
         }
     }
 
